colors for OAM layout table and more validation

--- a/prehtml/affobj.htm
+++ b/prehtml/affobj.htm
@@ -197,7 +197,7 @@ paint the screen pixels in that area (<b>q</b>) uses texture-pixel
   <td class="eqnrcell">(<em>[[ref:eq-aff-ofs]]</em>)
   <td class="eqcell">
     <b>p&minus;p</b><sub>0</sub> =
-	<b>P</b> &middot (<b>q&minus;q</b><sub>0</sub>),
+	<b>P</b> &middot; (<b>q&minus;q</b><sub>0</sub>),
 </table>
 <p>
 where <b>p</b><sub>0</sub> and <b>q</b><sub>0</sub> are the centers
