--- a/prehtml/bitmaps.htm
+++ b/prehtml/bitmaps.htm
@@ -1243,13 +1243,12 @@ Look in their respective readme's for more details.
 </pre>
 </div>
 
-<div class="cpt_fr" style="width:222px;">
-<table id="tbl-endian" class="border-std">
+<div class="cpt_fr">
+<table id="tbl-endian" class="border-std align-c">
 <caption>
   <b>Table <em>[[ref:tbl-endian]]</em></b>: Big endian vs little 
   endian interpretation of byte-sequence 01h, 02h, 03h, 04h
 </caption>
-<tbody align="center">
 <tr>
   <th>big u32     <td colspan=4> 0x01020304
 <tr>
