--- a/prehtml/affobj.htm
+++ b/prehtml/affobj.htm
@@ -34,12 +34,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Affine sprite introduction</a>.</li>
-  <li><a href="#sec-init">Affine sprite initialization</a>.</li>
-  <li><a href="#sec-artifact">Graphical artifacts</a>.</li>
-  <li><a href="#sec-demo">A very (af)fine demo</a>.</li>
-  <li><a href="#sec-combo">Off-center reference points and object 
-    combo's</a>.</li>
+  <li><a href="#sec-intro">Affine sprite introduction</a></li>
+  <li><a href="#sec-init">Affine sprite initialization</a></li>
+  <li><a href="#sec-artifact">Graphical artifacts</a></li>
+  <li><a href="#sec-demo">A very (af)fine demo</a></li>
+  <li><a href="#sec-combo">Off-center reference points and object combo's</a></li>
 </ul>
 <!-- [[/toc]] -->
 
