--- a/prehtml/fixed.htm
+++ b/prehtml/fixed.htm
@@ -34,10 +34,10 @@
 
 <!-- [[/toc]] -->
 <ul>
-  <li><a href="#sec-intro">What are fixed-point numbers</a>.
-  <li><a href="#sec-fmath">Fixed-point math</a>.
-  <li><a href="#sec-rmdiv">Faking division</a>.
-  <li><a href="#sec-lut">Look-up Tables</a>.
+  <li><a href="#sec-intro">What are fixed-point numbers</a>
+  <li><a href="#sec-fmath">Fixed-point math</a>
+  <li><a href="#sec-rmdiv">Faking division</a>
+  <li><a href="#sec-lut">Look-up Tables</a>
 </ul>
 <!-- [[/toc]] -->
 
