--- a/prehtml/gfx.htm
+++ b/prehtml/gfx.htm
@@ -33,10 +33,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-mos">Mosaic</a>.
-  <li><a href="#sec-blend">Blending</a>.
-  <li><a href="#sec-win">Windowing</a>.
-  <li><a href="#sec-conc">Conclusions</a>.
+  <li><a href="#sec-mos">Mosaic</a>
+  <li><a href="#sec-blend">Blending</a>
+  <li><a href="#sec-win">Windowing</a>
+  <li><a href="#sec-conc">Conclusions</a>
 </ul>
 <!-- [[/toc]] -->
 
