--- a/prehtml/hardware.htm
+++ b/prehtml/hardware.htm
@@ -34,9 +34,9 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Meet the GBA</a>.
-  <li><a href="#sec-specs">GBA Specs and Capabilities</a>.
-  <li><a href="#sec-memory">Memory Sections</a>.
+  <li><a href="#sec-intro">Meet the GBA</a>
+  <li><a href="#sec-specs">GBA Specs and Capabilities</a>
+  <li><a href="#sec-memory">Memory Sections</a>
 </ul>
 <!-- [[/toc]] -->
 
