--- a/prehtml/keys.htm
+++ b/prehtml/keys.htm
@@ -35,9 +35,9 @@
 <!-- [[toc]] -->
 <ul>
   <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-regs">Key registers</a>.
-  <li><a href="#sec-adv-keys">Beyond basic button states</a>.
-  <li><a href="#sec-demo">A simple key demo</a>.
+  <li><a href="#sec-regs">Key registers</a>
+  <li><a href="#sec-adv-keys">Beyond basic button states</a>
+  <li><a href="#sec-demo">A simple key demo</a>
 </ul>
 <!-- [[/toc]] -->
 
