--- a/prehtml/lab.htm
+++ b/prehtml/lab.htm
@@ -34,8 +34,8 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Lab introduction</a>.</li>
-  <li><a href="#sec-prio">Priority and drawing order</a>.</li>
+  <li><a href="#sec-intro">Lab introduction</a></li>
+  <li><a href="#sec-prio">Priority and drawing order</a></li>
 </ul>
 <!-- [[/toc]] -->
 
