--- a/prehtml/makefile.htm
+++ b/prehtml/makefile.htm
@@ -34,9 +34,9 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>.
-  <li><a href="#sec-make">My standard makefile</a>.
-  <li><a href="#sec-flags">Common compiler flags</a>.
+  <li><a href="#sec-intro">Introduction</a>
+  <li><a href="#sec-make">My standard makefile</a>
+  <li><a href="#sec-flags">Common compiler flags</a>
 </ul>
 <!-- [[/toc]] -->
 
