--- a/prehtml/matrix.htm
+++ b/prehtml/matrix.htm
@@ -33,10 +33,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-vec">Vectors</a>.
-  <li><a href="#sec-vec-ops">Vector operations</a>.
-  <li><a href="#sec-mat">Matrices</a>.
-  <li><a href="#sec-mat-ops">Matrix operations</a>.
+  <li><a href="#sec-vec">Vectors</a>
+  <li><a href="#sec-vec-ops">Vector operations</a>
+  <li><a href="#sec-mat">Matrices</a>
+  <li><a href="#sec-mat-ops">Matrix operations</a>
   <li><a href="#sec-space">Spaces, bases, coordinate transformations</a>
 </ul>
 <!-- [[/toc]] -->
