--- a/prehtml/regbg.htm
+++ b/prehtml/regbg.htm
@@ -34,11 +34,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Tilemap introduction</a>.
-  <li><a href="#sec-ctrl">Background control</a>.
-  <li><a href="#sec-map">Regular background tile-maps</a>.
-  <li><a href="#sec-demo">Tilemap demos</a>.
-  <li><a href="#sec-conc">In conclusion</a>.
+  <li><a href="#sec-intro">Tilemap introduction</a>
+  <li><a href="#sec-ctrl">Background control</a>
+  <li><a href="#sec-map">Regular background tile-maps</a>
+  <li><a href="#sec-demo">Tilemap demos</a>
+  <li><a href="#sec-conc">In conclusion</a>
 </ul>
 <!-- [[/toc]] -->
 
