--- a/prehtml/regobj.htm
+++ b/prehtml/regobj.htm
@@ -34,12 +34,12 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Sprite introduction</a>.
-  <li><a href="#sec-tiles">Sprite image data and mapping mode</a>.
-  <li><a href="#sec-oam">Sprite control: Object Attribute Memory</a>.
-  <li><a href="#sec-oam-entry">Object attributes: OBJ_ATTR</a>.
-  <li><a href="#sec-macro">Bitfield macros (OAM or otherwise)</a>.
-  <li><a href="#sec-obj-demo">Demo time</a>.
+  <li><a href="#sec-intro">Sprite introduction</a>
+  <li><a href="#sec-tiles">Sprite image data and mapping mode</a>
+  <li><a href="#sec-oam">Sprite control: Object Attribute Memory</a>
+  <li><a href="#sec-oam-entry">Object attributes: OBJ_ATTR</a>
+  <li><a href="#sec-macro">Bitfield macros (OAM or otherwise)</a>
+  <li><a href="#sec-obj-demo">Demo time</a>
 </ul>
 <!-- [[/toc]] -->
 
