--- a/prehtml/video.htm
+++ b/prehtml/video.htm
@@ -34,12 +34,12 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">General introduction</a>.
-  <li><a href="#sec-blanks">Draw and blank periods</a>.
-  <li><a href="#sec-colors">Colors and palettes</a>.
-  <li><a href="#sec-vid-types">Bitmaps, backgrounds and sprites</a>.
-  <li><a href="#sec-vid-regs">Display registers</a>.
-  <li><a href="#sec-vsync1">Vsyncing part I, the busy-wait loop</a>.
+  <li><a href="#sec-intro">General introduction</a>
+  <li><a href="#sec-blanks">Draw and blank periods</a>
+  <li><a href="#sec-colors">Colors and palettes</a>
+  <li><a href="#sec-vid-types">Bitmaps, backgrounds and sprites</a>
+  <li><a href="#sec-vid-regs">Display registers</a>
+  <li><a href="#sec-vsync1">Vsyncing part I, the busy-wait loop</a>
 </ul>
 <!-- [[/toc]] -->
 
