--- a/prehtml/affine.htm
+++ b/prehtml/affine.htm
@@ -34,12 +34,12 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">About this page</a>.
-  <li><a href="#sec-texmap">Texture mapping and affine transformations</a>.
+  <li><a href="#sec-intro">About this page</a>
+  <li><a href="#sec-texmap">Texture mapping and affine transformations</a>
   <li><a href="#sec-pov">&quot;Many of the truths we cling to depend 
-greatly upon our own point of view.&quot;</a>.
-  <li><a href="#sec-finish">Finishing up</a>.
-  <li><a href="#sec-aff-fun">Tonc's affine functions</a>.
+greatly upon our own point of view.&quot;</a>
+  <li><a href="#sec-finish">Finishing up</a>
+  <li><a href="#sec-aff-fun">Tonc's affine functions</a>
 </ul>
 <!-- [[/toc]] -->
 
