--- a/prehtml/intro.htm
+++ b/prehtml/intro.htm
@@ -507,7 +507,7 @@ some, mail <a href="mailto:cearn@coranac.com">me</a> about it.
 That's right, I'm actually asking for spell-flames. Currently, I'm 
 refitting the pages to fit my HTML auto-numbering tool, but it's a 
 lot stuff to go through (over 1M in plain text), and I may miss 
-something; if you see things like <em>[[ref:foo]]</em> in 
+something; if you see things like <em>[[re&#66;:foo]]</em> in 
 unfinished sections, those probably shouldn't be there. Of course, 
 if things are unclear or *gasp* incorrect, or if you have
 suggestions, I'd like to know that as well.
