--- a/prehtml/numbers.htm
+++ b/prehtml/numbers.htm
@@ -245,7 +245,7 @@ of course, we need the powers of two themselves. The first 11 are:
 
 <div class="lblock">
 <table id="tbl-pot" class="border-std align-r">
-<caption><b>Table <em>[[ref:[tbl-pot]]</em></b>: powers of two</caption>
+<caption><b>Table <em>[[ref:tbl-pot]]</em></b>: powers of two</caption>
 <tr class="align-c"><th>exponent<th>binary<th>decimal
 <tr><td> 0 <td>1			<td>1
 <tr><td> 1 <td>10			<td>2
@@ -1544,7 +1544,7 @@ If you look at the truth tables and the examples, you may already see
 how this can work. OR, AND, XOR are binary operators, and you can 
 think of the two operands as a source variable <i>s</i> and a 
 <dfn>mask</dfn> variable <i>m</i> which tells you which of the bits are 
-affected. In table <em>[[ref:tbl-bitops-reg]]</em>a I used <i>s</i>=35h and <i>m</i>=0Fh; the mask
+affected. In table <em>[[ref:tbl-bitops-eg]]</em>a I used <i>s</i>=35h and <i>m</i>=0Fh; the mask
 consists of the set bits (in blue), the red bits were the ones that were 
 affected. If you examine the table, you'll see that an OR sets bits, a 
 XOR toggles it and an AND keeps bits (i.e., clears the unmasked bits). 
