I thought I'd fixed this already ...

--- a/prehtml/text.htm
+++ b/prehtml/text.htm
@@ -439,13 +439,12 @@ got in front of you.
 
 <h4>Bitpacking</h4>
 
-<div class="cpt_fr" style="width:220px;">
-<table id="tbl-endian" class="border-std">
+<div class="cpt_fr">
+<table id="tbl-endian" class="border-std align-c">
 <caption>
   <b>Table <em>[[ref:tbl-endian]]</em></b>: Big endian vs little 
   endian interpretation of byte-sequence 01h, 02h, 03h, 04h
 </caption>
-<tbody align="center">
 <tr>
   <th>big u32     <td colspan=4> 0x01020304
 <tr>
@@ -456,7 +455,6 @@ got in front of you.
   <th>little u16  <td colspan=2> 0x0201 <td colspan=2> 0x0403
 <tr>
   <th>little u32  <td colspan=4> 0x04030201
-</tbody>
 </table>
 </div>
 
