Fix more errors

--- a/prehtml/mode7.htm
+++ b/prehtml/mode7.htm
@@ -243,7 +243,7 @@ be enlarged, and everything behind it (&lambda;&gt;1) is shrunk.
 <div class="cblock">
 <table class="frame-group">
 <tr>
-<td>
+  <td>
     <div class="cpt" style="width:256px;">
     <img src="../img/mode7/m7_3dview.png" id="img-3dview"
       alt="3D coordinate system"><br>
@@ -372,7 +372,7 @@ operation. Given a scanline <i>h</i>, here's what we do:
 <caption>
   Fig <em>[[ref:img-steps]]</em>a-d: The 4 steps of mode 7
 </caption>
-<tr>
+<tr class="align-c">
   <td><img src="../img/mode7/m7_step1.png" alt="pre-translate">
   <td><img src="../img/mode7/m7_step2.png" alt="rotate">
   <td><img src="../img/mode7/m7_step3.png" alt="scale">
