--- a/prehtml/bitmaps.htm
+++ b/prehtml/bitmaps.htm
@@ -37,7 +37,7 @@
   <li><a href="#sec-modes">GBA bitmap modes, for real</a>
   <li><a href="#sec-page">Page flipping</a>
   <li><a href="#sec-data">On data and how to use it</a>
-  <li><a href="ssec-conc">Conclusions</a>
+  <li><a href="#sec-conc">Conclusions</a>
 </ul>
 <!-- [[/toc]] -->
 
