--- a/prehtml/text.htm
+++ b/prehtml/text.htm
@@ -2090,15 +2090,12 @@ bit-unpacking offset, so that the text color is at <code>0x1F</code>.
 We've seen the same thing with the object text.
 </p><br>
 
-<div class="cpt_fr" style="width:200px;">
-<center>
-<table id="tbl-bupshade"
-    bgcolor=#E0E0E0>
+<div class="cpt_fr">
+<table id="tbl-bupshade" class="align-c" bgcolor=#E0E0E0>
 <caption>
   <b>Table <em>[[ref:tbl-bupshade]]</em></b>: 
-  bit-unpacking with with base <code>0xEE</code>.
+  bit-unpacking with base <code>0xEE</code>.
 </caption>
-<tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=9>&nbsp;
     <th>bit 
@@ -2138,9 +2135,7 @@ We've seen the same thing with the object text.
     <td class="bdrLL">&nbsp;
     <th> E <th> F <th> 0 <th> E <th> F <th> F <th> F <th> 0
     <td class="bdrRR">&nbsp;
-</tbody>
 </table>
-</center>
 </div>
 
 <p>
