--- a/prehtml/asm.htm
+++ b/prehtml/asm.htm
@@ -3094,7 +3094,7 @@ for <code>add</code>, 2 for <code>sub</code>, et cetera.
 <!-- ============================================================== -->
 
 <h2 id="sec-thumb"><em>[[ref:sec-thumb]]</em>
-  THUMB assembly</h2>
+  The THUMB instruction set</h2>
 <p>
 The THUMB instruction set is a subset of the full list of ARM 
 instructions. The defining feature of THUMB instructions is that 
