--- a/prehtml/hardware.htm
+++ b/prehtml/hardware.htm
@@ -202,7 +202,7 @@ For more information on the CPU, go to
 <!-- ============================================================== -->
 
 <h2 id="sec-memory"><em>[[ref:sec-memory]]</em>
-  Memory Sections</h2>
+  Memory sections</h2>
 <p>
 This section lists the various memory areas. It's basically
 a summary of the <a href="http://nocash.emubase.de/gbatek.htm" target="_blank">GBATek</a> 
