--- a/prehtml/mode7.htm
+++ b/prehtml/mode7.htm
@@ -853,7 +853,7 @@ everything should be fine.
 <!-- ============================================================== -->
 
 <h2 id="sec-final"><em>[[ref:sec-final]]</em>
-  Final Thoughts</h2>
+  Final thoughts</h2>
 <p>
 This has been one of those occasions that show that programming 
 (especially low-level programming) is as much of a science as an art. 
