--- a/prehtml/numbers.htm
+++ b/prehtml/numbers.htm
@@ -43,7 +43,7 @@
 <!-- ============================================================== -->
 
 <h2 id="sec-num"><em>[[ref:sec-num]]</em>
-  Numbers</h2>
+  Number systems</h2>
 <h3 id="ssec-num-intro"><em>[[ref:ssec-num-intro]]</em>
   The true meaning of symbols</h3>
 
