Full re-export of text

--- a/text/affine.htm
+++ b/text/affine.htm
@@ -34,12 +34,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">About this page</a>
-  <li><a href="#sec-texmap">Texture mapping and affine transformations</a>
-  <li><a href="#sec-pov">&quot;Many of the truths we cling to depend 
-greatly upon our own point of view.&quot;</a>
-  <li><a href="#sec-finish">Finishing up</a>
-  <li><a href="#sec-aff-fun">Tonc's affine functions</a>
+  <li><a href="#sec-intro">About this page</a></li>
+  <li><a href="#sec-texmap">Texture mapping and affine transformations.</a></li>
+  <li><a href="#sec-pov">&#8220;Many of the truths we cling to depend greatly upon our own point of view.&#8221;</a></li>
+  <li><a href="#sec-finish">Finishing up</a></li>
+  <li><a href="#sec-aff-fun">Tonc's affine functions</a></li>
 </ul>
 <!-- [[/toc]] -->
 
