--- a/text/affobj.htm
+++ b/text/affobj.htm
@@ -38,7 +38,7 @@
   <li><a href="#sec-init">Affine sprite initialization</a></li>
   <li><a href="#sec-artifact">Graphical artifacts</a></li>
   <li><a href="#sec-demo">A very (af)fine demo</a></li>
-  <li><a href="#sec-combo">Off-center reference points and object combo's</a></li>
+  <li><a href="#sec-combo">Off-center reference points and object combos</a></li>
 </ul>
 <!-- [[/toc]] -->
 
