--- a/text/asm.htm
+++ b/text/asm.htm
@@ -35,8 +35,8 @@
 <ul>
   <li><a href="#sec-intro">Introduction</a></li>
   <li><a href="#sec-asm">General assembly</a></li>
-  <li><a href="#sec-arm">ARM assembly</a></li>
-  <li><a href="#sec-thumb">THUMB assembly</a></li>
+  <li><a href="#sec-arm">The ARM instruction set</a></li>
+  <li><a href="#sec-thumb">The THUMB instruction set</a></li>
   <li><a href="#sec-gas">GAS: the GNU assembler</a></li>
   <li><a href="#sec-cpy">A real world example: fast 16/32-bit copiers</a></li>
 </ul>
@@ -3094,7 +3094,7 @@ for <code>add</code>, 2 for <code>sub</code>, et cetera.
 <!-- ============================================================== -->
 
 <h2 id="sec-thumb">23.4.
-  THUMB assembly</h2>
+  The THUMB instruction set</h2>
 <p>
 The THUMB instruction set is a subset of the full list of ARM 
 instructions. The defining feature of THUMB instructions is that 
