--- a/text/bitmaps.htm
+++ b/text/bitmaps.htm
@@ -33,11 +33,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-modes">GBA bitmap modes, for real</a>
-  <li><a href="#sec-page">Page flipping</a>
-  <li><a href="#sec-data">On data and how to use it</a>
-  <li><a href="#sec-conc">Conclusions</a>
+  <li><a href="#sec-intro">Introduction</a></li>
+  <li><a href="#sec-modes">The GBA bitmap modes</a></li>
+  <li><a href="#sec-page">Page flipping</a></li>
+  <li><a href="#sec-data">On data and how to use it</a></li>
+  <li><a href="#sec-conc">Conclusions</a></li>
 </ul>
 <!-- [[/toc]] -->
 
