--- a/text/first.htm
+++ b/text/first.htm
@@ -34,10 +34,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-first">Finally, your first GBA program</a>
-  <li><a href="#sec-second">Your second first GBA program</a>
-  <li><a href="#sec-notes">General notes on GBA programming</a>
-  <li><a href="#sec-testing">Testing your code on a real GBA</a>
+  <li><a href="#sec-first">Finally, your first GBA program</a></li>
+  <li><a href="#sec-second">Your second first GBA program</a></li>
+  <li><a href="#sec-notes">General notes on GBA programming</a></li>
+  <li><a href="#sec-testing">Testing your code on a real GBA</a></li>
 </ul>
 <!-- [[/toc]] -->
 
