--- a/text/hardware.htm
+++ b/text/hardware.htm
@@ -34,9 +34,9 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Meet the GBA</a>
-  <li><a href="#sec-specs">GBA Specs and Capabilities</a>
-  <li><a href="#sec-memory">Memory Sections</a>
+  <li><a href="#sec-intro">Meet the GBA</a></li>
+  <li><a href="#sec-specs">GBA specs and capabilities</a></li>
+  <li><a href="#sec-memory">Memory sections</a></li>
 </ul>
 <!-- [[/toc]] -->
 
@@ -202,7 +202,7 @@ For more information on the CPU, go to
 <!-- ============================================================== -->
 
 <h2 id="sec-memory">1.3.
-  Memory Sections</h2>
+  Memory sections</h2>
 <p>
 This section lists the various memory areas. It's basically
 a summary of the <a href="http://nocash.emubase.de/gbatek.htm" target="_blank">GBATek</a> 
