--- a/text/interrupts.htm
+++ b/text/interrupts.htm
@@ -34,11 +34,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-regs">Interrupts registers</a>
-  <li><a href="#sec-isr">Interrupt Service Routines</a>
-  <li><a href="#sec-switch">Creating an interrupt switchboard</a>
-  <li><a href="#sec-demo">Finally, an interrupt demo!</a>
+  <li><a href="#sec-intro">Introduction</a></li>
+  <li><a href="#sec-regs">Interrupts registers</a></li>
+  <li><a href="#sec-isr">Interrupt Service Routines</a></li>
+  <li><a href="#sec-switch">Creating an interrupt switchboard</a></li>
+  <li><a href="#sec-demo">Nested interrupt demo</a></li>
 </ul>
 <!-- [[/toc]] -->
 
