--- a/text/intro.htm
+++ b/text/intro.htm
@@ -34,10 +34,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-org">Organisation</a>
-  <li><a href="#sec-nota">Terminology and Notation</a>
-  <li><a href="#sec-cnd">Prerequisites</a>
-  <li><a href="#sec-feedback">On errors, suggestions</a>
+  <li><a href="#sec-org">Organisation</a></li>
+  <li><a href="#sec-nota">Terminology and Notation</a></li>
+  <li><a href="#sec-cnd">Prerequisites</a></li>
+  <li><a href="#sec-feedback">On errors, suggestions</a></li>
 </ul>
 <!-- [[/toc]] -->
 
