--- a/text/keys.htm
+++ b/text/keys.htm
@@ -34,10 +34,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-regs">Key registers</a>
-  <li><a href="#sec-adv-keys">Beyond basic button states</a>
-  <li><a href="#sec-demo">A simple key demo</a>
+  <li><a href="#sec-intro">Introduction</a></li>
+  <li><a href="#sec-regs">Keypad registers</a></li>
+  <li><a href="#sec-adv-keys">Beyond basic button states</a></li>
+  <li><a href="#sec-demo">A simple key demo</a></li>
 </ul>
 <!-- [[/toc]] -->
 
