--- a/text/matrix.htm
+++ b/text/matrix.htm
@@ -33,11 +33,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-vec">Vectors</a>
-  <li><a href="#sec-vec-ops">Vector operations</a>
-  <li><a href="#sec-mat">Matrices</a>
-  <li><a href="#sec-mat-ops">Matrix operations</a>
-  <li><a href="#sec-space">Spaces, bases, coordinate transformations</a>
+  <li><a href="#sec-vec">Vectors</a></li>
+  <li><a href="#sec-vec-ops">Vector operations</a></li>
+  <li><a href="#sec-mat">Matrices</a></li>
+  <li><a href="#sec-mat-ops">Matrix operations</a></li>
+  <li><a href="#sec-space">Spaces, bases, coordinate transformations</a></li>
 </ul>
 <!-- [[/toc]] -->
 
