--- a/text/mode7.htm
+++ b/text/mode7.htm
@@ -39,12 +39,12 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-persp">Getting a sense of perspective</a>
-  <li><a href="#sec-m7-math">Enter Mode 7</a>
-  <li><a href="#sec-demo">Threefold demo</a>
-  <li><a href="#sec-order">Order, order!</a>
-  <li><a href="#sec-final">Final thoughts</a>
+  <li><a href="#sec-intro">Introduction</a></li>
+  <li><a href="#sec-persp">Getting a sense of perspective</a></li>
+  <li><a href="#sec-m7-math">Enter Mode 7</a></li>
+  <li><a href="#sec-demo">Threefold demo</a></li>
+  <li><a href="#sec-order">Order, order!</a></li>
+  <li><a href="#sec-final">Final thoughts</a></li>
 </ul>
 <!-- [[/toc]] -->
 
@@ -243,7 +243,7 @@ be enlarged, and everything behind it (&lambda;&gt;1) is shrunk.
 <div class="cblock">
 <table class="frame-group">
 <tr>
-<td>
+  <td>
     <div class="cpt" style="width:256px;">
     <img src="../img/mode7/m7_3dview.png" id="img-3dview"
       alt="3D coordinate system"><br>
@@ -372,7 +372,7 @@ operation. Given a scanline <i>h</i>, here's what we do:
 <caption>
   Fig 20.6a-d: The 4 steps of mode 7
 </caption>
-<tr>
+<tr class="align-c">
   <td><img src="../img/mode7/m7_step1.png" alt="pre-translate">
   <td><img src="../img/mode7/m7_step2.png" alt="rotate">
   <td><img src="../img/mode7/m7_step3.png" alt="scale">
@@ -853,7 +853,7 @@ everything should be fine.
 <!-- ============================================================== -->
 
 <h2 id="sec-final">20.6.
-  Final Thoughts</h2>
+  Final thoughts</h2>
 <p>
 This has been one of those occasions that show that programming 
 (especially low-level programming) is as much of a science as an art. 
