--- a/text/mode7ex.htm
+++ b/text/mode7ex.htm
@@ -33,13 +33,14 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-theory">Basic mode 7 theory</a>
-  <li><a href="#sec-horz">Horizon and backdrop</a>
-  <li><a href="#sec-flr">The floor</a>
-  <li><a href="#sec-objs">Sprites</a>
-  <li><a href="#sec-code">Implementation</a>
-  <li><a href="#sec-conc">Concluding remarks</a>
+  <li><a href="#sec-intro">Introduction</a></li>
+  <li><a href="#sec-theory">Basic mode 7 theory</a></li>
+  <li><a href="#sec-horz">Horizon and backdrop</a></li>
+  <li><a href="#sec-horz-find">Finding the horizon</a></li>
+  <li><a href="#sec-flr">The floor</a></li>
+  <li><a href="#sec-objs">Sprites</a></li>
+  <li><a href="#sec-code">Implementation</a></li>
+  <li><a href="#sec-conc">Concluding remarks</a></li>
 </ul>
 <!-- [[/toc]] -->
 
