--- a/text/numbers.htm
+++ b/text/numbers.htm
@@ -33,9 +33,9 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-num">Number systems</a>
-  <li><a href="#sec-bits">Of bits and bytes</a>
-  <li><a href="#sec-bitops">Bit operations</a>
+  <li><a href="#sec-num">Number systems</a></li>
+  <li><a href="#sec-bits">Of bits and bytes</a></li>
+  <li><a href="#sec-bitops">Bit operations</a></li>
 </ul>
 <!-- [[/toc]] -->
 
@@ -43,7 +43,7 @@
 <!-- ============================================================== -->
 
 <h2 id="sec-num">A.1.
-  Numbers</h2>
+  Number systems</h2>
 <h3 id="ssec-num-intro">A.1.1.
   The true meaning of symbols</h3>
 
