--- a/text/refs.htm
+++ b/text/refs.htm
@@ -33,10 +33,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-gen">General sites</a>
-  <li><a href="#sec-doc">Documents</a>
-  <li><a href="#sec-tools">Tools</a>
-  <li><a href="#sec-books">Books</a>
+  <li><a href="#sec-gen">General sites</a></li>
+  <li><a href="#sec-doc">Documents</a></li>
+  <li><a href="#sec-tools">Tools</a></li>
+  <li><a href="#sec-books">Books</a></li>
 </ul>
 <!-- [[/toc]] -->
 
