--- a/text/sndsqr.htm
+++ b/text/sndsqr.htm
@@ -34,10 +34,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction to GBA sound</a>
-  <li><a href="#sec-sndwav">Sound and Waves</a>
-  <li><a href="#sec-gbasnd">GBA sound</a>
-  <li><a href="#sec-demo">Demo time</a>
+  <li><a href="#sec-intro">Introduction to GBA sound</a></li>
+  <li><a href="#sec-sndwav">Sound and Waves</a></li>
+  <li><a href="#sec-gbasnd">GBA sound</a></li>
+  <li><a href="#sec-demo">Demo time</a></li>
 </ul>
 <!-- [[/toc]] -->
 
