--- a/text/timers.htm
+++ b/text/timers.htm
@@ -34,9 +34,9 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Timing is everything</a>
-  <li><a href="#sec-tmr">GBA Timers</a>
-  <li><a href="#sec-demo">Timer demo : like clockwork</a>
+  <li><a href="#sec-intro">Timing is everything</a></li>
+  <li><a href="#sec-tmr">GBA Timers</a></li>
+  <li><a href="#sec-demo">Timer demo : like clockwork</a></li>
 </ul>
 <!-- [[/toc]] -->
 
