--- a/text/affbg.htm
+++ b/text/affbg.htm
@@ -34,11 +34,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-regs">Affine background registers</a>
-  <li><a href="#sec-aff-ofs">Positioning and transforming affine backgrounds</a>
-  <li><a href="#sec-map">Mapping format</a>
-  <li><a href="#sec-demo"><tt>sbb_aff</tt> demo</a>
+  <li><a href="#sec-intro">Introduction</a></li>
+  <li><a href="#sec-regs">Affine background registers</a></li>
+  <li><a href="#sec-aff-ofs">Positioning and transforming affine backgrounds</a></li>
+  <li><a href="#sec-map">Mapping format</a></li>
+  <li><a href="#sec-demo"><tt>sbb_aff</tt> demo</a></li>
 </ul>
 <!-- [[/toc]] -->
 
