--- a/text/dma.htm
+++ b/text/dma.htm
@@ -34,10 +34,10 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">DMA &hellip; que?</a>
-  <li><a href="#sec-regs">DMA registers</a>
-  <li><a href="#sec-func">Some DMA routines</a>
-  <li><a href="#sec-demo">DMA demo : circular windows</a>
+  <li><a href="#sec-intro">DMA &#8230; que?</a></li>
+  <li><a href="#sec-regs">DMA registers</a></li>
+  <li><a href="#sec-func">Some DMA routines</a></li>
+  <li><a href="#sec-demo">DMA demo : circular windows</a></li>
 </ul>
 <!-- [[/toc]] -->
 
