--- a/text/objbg.htm
+++ b/text/objbg.htm
@@ -35,12 +35,12 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Sprites and backgrounds introduction</a>
-  <li><a href="#sec-ctrl">Sprite and background control</a>
-  <li><a href="#sec-map">Sprite and background mapping</a>
-  <li><a href="#sec-img">Sprite and background image data</a>
-  <li><a href="#sec-summary">Summary</a>
-  <li><a href="#sec-name">What's in a name?</a>
+  <li><a href="#sec-intro">Sprites and backgrounds introduction</a></li>
+  <li><a href="#sec-ctrl">Sprite and background control</a></li>
+  <li><a href="#sec-map">Sprite and background mapping</a></li>
+  <li><a href="#sec-img">Sprite and background image data</a></li>
+  <li><a href="#sec-summary">Summary</a></li>
+  <li><a href="#sec-name">What's in a name?</a></li>
 </ul>
 <!-- [[/toc]] -->
 
