--- a/text/swi.htm
+++ b/text/swi.htm
@@ -34,12 +34,12 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>
-  <li><a href="#sec-funs">The BIOS functions</a>
-  <li><a href="#sec-usage">Using BIOS calls</a>
-  <li><a href="#sec-demo">Demo graphs</a>
-  <li><a href="#sec-vsync2">Vsyncing part II, VBlankIntrWait</a>
-  <li><a href="#sec-concs">Final thoughts</a>
+  <li><a href="#sec-intro">Introduction</a></li>
+  <li><a href="#sec-funs">The BIOS functions</a></li>
+  <li><a href="#sec-usage">Using BIOS calls</a></li>
+  <li><a href="#sec-demo">Demo graphs</a></li>
+  <li><a href="#sec-vsync2">Vsyncing part II, VBlankIntrWait</a></li>
+  <li><a href="#sec-concs">Final thoughts</a></li>
 </ul>
 <!-- [[/toc]] -->
 
