--- a/text/video.htm
+++ b/text/video.htm
@@ -34,12 +34,12 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">General introduction</a>
-  <li><a href="#sec-blanks">Draw and blank periods</a>
-  <li><a href="#sec-colors">Colors and palettes</a>
-  <li><a href="#sec-vid-types">Bitmaps, backgrounds and sprites</a>
-  <li><a href="#sec-vid-regs">Display registers</a>
-  <li><a href="#sec-vsync1">Vsyncing part I, the busy-wait loop</a>
+  <li><a href="#sec-intro">General introduction</a></li>
+  <li><a href="#sec-blanks">Draw and blank periods</a></li>
+  <li><a href="#sec-colors">Colors and palettes</a></li>
+  <li><a href="#sec-vid-types">Bitmaps, backgrounds and sprites</a></li>
+  <li><a href="#sec-vid-regs">Display registers: REG_DISPCNT, REG_DISPSTAT and REG_VCOUNT</a></li>
+  <li><a href="#sec-vsync1">Vsyncing part I, the busy-wait loop</a></li>
 </ul>
 <!-- [[/toc]] -->
 
